<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page2"
    android:background="@color/tampilan">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/judul"
            android:textAlignment="center"
            android:textColor="@color/judul"
            android:textSize="30sp"
            android:textStyle="bold" >

        </TextView>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <Button
                 android:id="@+id/persegi"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="50dp"
                 android:layout_marginRight="50dp"
                 android:background="@mipmap/kotak"
                 android:text="@string/persegi"/>
             <Button
                 android:id="@+id/lingkaran"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="100dp"
                 android:background="@mipmap/ling"
                 android:text="@string/lingkaran"/>

         </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/persegipjg"
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginRight="30dp"
                    android:background="@mipmap/kotak_dowo"
                    android:text="@string/persegipjg"/>
                <Button
                    android:id="@+id/segitiga"
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="100dp"
                    android:background="@mipmap/segitelu"
                    android:text="@string/segitiga"/>

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/trapesium"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@mipmap/kotakmiring"
                    android:text="@string/trapesium"/>

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/power"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/matio"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/tanda"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="215dp"
                    android:layout_marginBottom="10dp"
                    android:background="@mipmap/kopi_tengen" />
                <TextView
                    android:id="@+id/capp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="0dp"
                    android:text="@string/nim"
                    android:textColor="@color/txt"
                    android:textSize="10dp"
                    android:textStyle="bold"/>


            </TableRow>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>